[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cubiemedia-mqtt-client"
version = "0.1.7"
readme = "README.md"
description = "Gateway connecting different Protocols and Devices via MQTT"
dependencies = ["requests", "zeroconf", "flask", "pyserial", "netifaces", "enocean", "paho-mqtt"]

[project.scripts]
cubiemedia-mqtt-client = "mqtt_client:main"
